update product card

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,7 +9,7 @@
   --text-color-primary-black:#121417;
   --text-color-secondary-black: rgba(18, 20, 23, 0.50);
   --text-color-white:#FFFFFF;
-  --text-color-grey: #8A8A89;
+  --text-color-grey: #8a8a8957;
   --text-color-blue: #3470FF;
   --text-color-active-blue: #0B44CD;
 
