--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,6 +6,7 @@
   --bg-second-orange: #f07555;
   --bg-button-color: #3470FF;
   --bg-active-button-color: #0B44CD;
+  --bg-overlay: rgba(18, 20, 23, 0.50);
 
   --text-color-primary-black:#121417;
   --text-color-secondary-black: rgba(18, 20, 23, 0.50);
