added counting the number of items and elements

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -14,6 +14,7 @@
   --text-color-secondary-black: #12141780;
   --text-color-white:#FFFFFF;
   --text-color-grey: #8a8a8957;
+  --text-color-grey1: #8a8a897c;
   --text-color-blue: #3470FF;
   --text-color-active-blue: #0B44CD;
   --text-second-green: #02BD2A;
