--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,6 +7,7 @@
   --bg-primary-orange: #f75f25;
   --bg-second-orange: #f38e74;
   --bg-button-color: #3470FF;
+  /* --bg-button-color: #78a0ff; */
   --bg-active-button-color: #0B44CD;
   --bg-overlay: #12141780;
   --bg-color-grey: #8A8A8957;
