--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -4,6 +4,7 @@
   --second-white: #F6F8FD;
   --input-background-color: #F7F7FB;
   --primary-grey: #8A8A8957;
+  --second-grey: #808080;
   --primary-green: #9EE2AC;
   --second-green: #02BD2A;
   --primary-orange: #F75F25;
